--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
 		"type": "image/png",
 		"sizes": "192x192"
 	}],
-	"start_url": "https://github.com/joelthorner/stranger-cards/",
+	"start_url": "https://joelthorner.github.io/stranger-cards/",
 	"background_color": "#081321",
 	"theme_color": "#081321",
 	"orientation": "portrait",
